Unit tests, more testable code